[package]
name = "artos"
version = "0.1.0"
authors = ["Andrey Medvedev <medvedev@exametrika.com>"]
edition = "2018"

[lib]
name = "artos"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bincode = "1.3.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.7.3"
tempfile = "3.1.0"
flate2 = "1.0.19"
threadpool="1.8.1"
num_cpus = "1.13.0"
hostname = "0.3.1"
simple_logger = "1.9.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
mockall = "0.8.3"